# tgel-stock

./: .gitignore  LICENSE  README.md  Run-Blender.ps1  build.py  build_probe.py  pyproject.toml
recipes/: basic-box-wagon.rollingstock.json  basic-diesel-locomotive.rollingstock.json
tests/bpy/: assemble_test.py  bake_test.py  body_locomotive_test.py  body_wagon_test.py  bogie_test.py  coupler_test.py  full_build_test.py  lod_test.py  materials_test.py  probe_test.py  run_blender_failure_probe.py  smoke_test.py  uvmap_test.py  wheel_test.py
tests/pure/: test_canonical.py  test_clean_path.py  test_manifest.py  test_recipe.py
tgel_stock/: __init__.py  assemble.py  bake.py  canonical.py  export.py  highpoly.py  lod.py  manifest.py  materials.py  recipe.py  scene.py  uvmap.py  validate.py
tgel_stock/parts/: __init__.py  body_locomotive.py  body_wagon.py  bogie.py  coupler.py  wheel.py
